--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "start": "next start"
   },
   "dependencies": {
-    "@prisma/client": "^5.6.0",
+    "@hookform/resolvers": "^3.3.4",
+    "@prisma/client": "^5.7.1",
+    "@prisma/extension-accelerate": "^0.6.2",
     "@t3-oss/env-nextjs": "^0.7.1",
     "@tanstack/react-query": "^4.36.1",
     "@trpc/client": "^10.43.6",
@@ -23,6 +25,8 @@
     "next": "^14.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.49.2",
+    "react-toastify": "^9.1.3",
     "server-only": "^0.0.1",
     "superjson": "^2.2.1",
     "zod": "^3.22.4"
@@ -40,7 +44,7 @@
     "postcss": "^8.4.31",
     "prettier": "^3.1.0",
     "prettier-plugin-tailwindcss": "^0.5.7",
-    "prisma": "^5.6.0",
+    "prisma": "^5.7.1",
     "tailwindcss": "^3.3.5",
     "typescript": "^5.1.6"
   },
